--- a/Prototipo Proyecto/index.html
+++ b/Prototipo Proyecto/index.html
@@ -93,7 +93,7 @@
                         <tr>    
                             <!-- Datos -->      
                             <td tabindex="0">Calendario en tiempo real</td>    
-                            <td tabindex="0" aria-label="Sí Cumple"><i aria-hidden="true" class="material-icons Small red white-text">close</i></td>   
+                            <td tabindex="0" aria-label="No Cumple"><i aria-hidden="true" class="material-icons Small red white-text">close</i></td>   
                         </tr>   
                     </table>
                 </div>
